--- a/se-challenge-payroll/API/src/main/resources/application.properties
+++ b/se-challenge-payroll/API/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password =12345678
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+#spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.jdbc.batch_size=4
+#spring.jpa.properties.hibernate.order_inserts=true
